form增加微動態

--- a/form.htm
+++ b/form.htm
@@ -458,6 +458,26 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="form_grp">
+                                        <div class="form_title">有微動態</div>
+                                        <div class="form_content">
+                                            <div class="radio_grp form_inline">
+                                                <label><input name="radioSample" type="radio" value=""><span>選項一</span></label>
+                                                <label><input name="radioSample" type="radio" value=""><span>選項二</span></label>
+                                                <label><input name="radioSample" type="radio" value=""><span>選項三</span></label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form_grp">
+                                            <div class="form_title">有微動態</div>
+                                            <div class="form_content">
+                                                <div class="check_grp form_inline">
+                                                    <label><input name="" type="checkbox" value=""><span>選項一</span></label>
+                                                    <label><input name="" type="checkbox" value=""><span>選項二</span></label>
+                                                    <label><input name="" type="checkbox" value=""><span>選項三</span></label>
+                                                </div>
+                                            </div>
+                                        </div>
                                     <div class="form_grp" role="group" aria-labelledby="fake-legend">
                                         <label class="form_title">參加場次</label>
                                         <div class="form_content" id="fake-legend">
