2020-0817 flex grid 整理

--- a/mp_template.htm
+++ b/mp_template.htm
@@ -193,6 +193,7 @@
                 <div class="container">
                     <h2>主標題 customize free4</h2>
                     <div class="Flex-set">
+                        <!-- 1 -->
                         <div class="left">
                             <h3>左欄 6</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
@@ -201,15 +202,57 @@
                             <h3>右欄 6</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
                         </div>
+                        <!-- 2 -->
                         <div class="col">
+                            <h3>中欄 1</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                        <div class="col">
+                            <h3>中欄 2</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                        <div class="col">
+                            <h3>中欄 3</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                        <div class="col">
+                            <h3>中欄 4</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                        <div class="col">
+                            <h3>中欄 5</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                        <div class="col">
+                            <h3>中欄 6</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="customize-free4">
+                <div class="container">
+                    <h2>主標題 customize free4</h2>
+                    <div class="Flex-set">
+                        <!-- 1 -->
+                        <div class="left">
+                            <h3>左欄 6</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                        <div class="right">
+                            <h3>右欄 6</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
+                        </div>
+                        <!-- 3 -->
+                        <div class="col2">
                             <h3>下欄 1</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
                         </div>
-                        <div class="col">
+                        <div class="col2">
                             <h3>下欄 2</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
                         </div>
-                        <div class="col">
+                        <div class="col2">
                             <h3>下欄 3</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo facilis sequi quidem velit quae voluptas temporibus aliquam quasi doloremque sunt? Sapiente ea dolorem dolore sit itaque facere sunt voluptatem deleniti!</p>
                         </div>
