【button】按鈕預設四種：主要、次要、一般、更多、readonly、disabled，相關按鈕調整，新增有icon版本

--- a/index.htm
+++ b/index.htm
@@ -9,66 +9,66 @@
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
-    <![endif]-->
-    <!-- hyUI -->
-    <link rel="stylesheet" href="css/hyui.css">
+<![endif]-->
+<!-- hyUI -->
+<link rel="stylesheet" href="css/hyui.css">
 <style>
-.demo_wrap {
-    max-width: 1000px;
-    margin: 0em auto 1em;
-    padding: 15px 15px 3em;
-    clear: both;
-    background: #FFF
-}
-.demo_wrap h1 {
-    display: block;
-    margin: 0px auto;
-    max-width: 300px;
-    float: left;
-    margin-right: 1em
-}
-@media screen and (max-width:545px) {
-    .demo_wrap h1 {
-        max-width: 100%;
-        float: none;
-        text-align: center
+    .demo_wrap {
+        max-width: 1000px;
+        margin: 0em auto 1em;
+        padding: 15px 15px 3em;
+        clear: both;
+        background: #FFF
     }
-}
-.demo_wrap h1 img {
-    width: 300px
-}
-.num {
-    width: 12%
-}
-body {
-    counter-reset: num
-}
-table {
-    margin-bottom: 1em
-}
-table caption {
-    text-align: left;
-    font-weight: bold;
-    font-size: 1.25em;
-    padding: .5em 0;
-    color: #ff5050
-}
-tbody tr td:first-child:before {
-    counter-increment: num;
-    display: block;
-    text-align: center;
-    content: counters(num, ".") " "
-}
-tbody tr td:nth-child(2) {
-    width: 35%
-}
-.btn_grp{
-    text-align: right;
-}
-@media screen and (max-width:545px) {
-   .btn_grp{
-    text-align: center;
-} 
+    .demo_wrap h1 {
+        display: block;
+        margin: 0px auto;
+        max-width: 300px;
+        float: left;
+        margin-right: 1em
+    }
+    @media screen and (max-width:545px) {
+        .demo_wrap h1 {
+            max-width: 100%;
+            float: none;
+            text-align: center
+        }
+    }
+    .demo_wrap h1 img {
+        width: 300px
+    }
+    .num {
+        width: 12%
+    }
+    body {
+        counter-reset: num
+    }
+    table {
+        margin-bottom: 1em
+    }
+    table caption {
+        text-align: left;
+        font-weight: bold;
+        font-size: 1.25em;
+        padding: .5em 0;
+        color: #ff5050
+    }
+    tbody tr td:first-child:before {
+        counter-increment: num;
+        display: block;
+        text-align: center;
+        content: counters(num, ".") " "
+    }
+    tbody tr td:nth-child(2) {
+        width: 35%
+    }
+    .btn_grp{
+        text-align: right;
+    }
+    @media screen and (max-width:545px) {
+       .btn_grp{
+        text-align: center;
+    } 
 }
 </style>
 </head>
@@ -116,7 +116,7 @@ tbody tr td:nth-child(2) {
                         <td>內容頁</td>
                         <td><a href="cp_template.htm"></a></td>
                     </tr>
-                     <tr>
+                    <tr>
                         <td></td>
                         <td>內容頁-照片</td>
                         <td><a href="cp_photo_template.htm"></a></td>
@@ -143,10 +143,15 @@ tbody tr td:nth-child(2) {
                     </tr>
                     <tr>
                         <td></td>
+                        <td>按鈕樣式</td>
+                        <td><a href="btn.htm"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
                         <td>網站地圖</td>
                         <td><a href="sitemap_template.htm"></a></td>
                     </tr>
-                     <tr>
+                    <tr>
                         <td></td>
                         <td>404 網站錯誤</td>
                         <td><a href="404.htm"></a></td>
@@ -168,17 +173,17 @@ tbody tr td:nth-child(2) {
                         <td>電子報</td>
                         <td><a href="epaper_template.htm"></a></td>
                     </tr>
-                     <tr>
+                    <tr>
                         <td></td>
                         <td>...</td>
                         <td><a href="..."></a></td>
                     </tr>
-                     <tr>
+                    <tr>
                         <td></td>
                         <td>...</td>
                         <td><a href="..."></a></td>
                     </tr>
-                  
+
                 </tbody>
             </table>
         </div>
@@ -189,12 +194,12 @@ tbody tr td:nth-child(2) {
     <script src="js/hyui.js"></script>
     <script src="js/customize.js"></script>
     <script>
-    $(function() {
-        $('tbody').find('a').each(function(index, el) {
-            var Link = $(this).attr('href');
-            $(this).text(Link);
-        });
-    })
+        $(function() {
+            $('tbody').find('a').each(function(index, el) {
+                var Link = $(this).attr('href');
+                $(this).text(Link);
+            });
+        })
     </script>
 </body>
 
