20200914 修改檔案上傳

--- a/cp_photo_template.htm
+++ b/cp_photo_template.htm
@@ -10,13 +10,13 @@
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
 <![endif]-->
-<!-- slick css-->
-<link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
-<link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
-<!-- hyUI css -->
-<link rel="stylesheet" href="css/hyui.css">
-<!-- favicon -->
-<link href="images/favicon.png" rel="icon" type="image/x-icon">
+    <!-- slick css-->
+    <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
+    <!-- hyUI css -->
+    <link rel="stylesheet" href="css/hyui.css">
+    <!-- favicon -->
+    <link href="images/favicon.png" rel="icon" type="image/x-icon">
 </head>
 
 <body>
@@ -58,7 +58,6 @@
                             <li><a href="#">ENGLISH</a></li>
                         </ul>
                     </div>
-
                 </nav>
                 <!-- navigation End -->
                 <h1>
@@ -157,7 +156,7 @@
             <a class="accesskey" href="#aC" id="aC" accesskey="C" title="主要內容區">:::</a>
             <div class="container">
                 <!-- 左側 -->
-                <div class="left_block">
+                <div class="left_block hidden">
                     <div class="leftblock_list">
                         <h2>標題文字</h2>
                         <ul>
@@ -345,52 +344,51 @@
                             </div>
                             <!-- slider-nav end-->
                         </div>
+                        <!-- weblink 外部連結 -->
+                        <div class="web_link">
+                            <h3>外部連結</h3>
+                            <ol>
+                                <li><a href="javscript:;">外部連結1</a></li>
+                                <li><a href="javscript:;">外部連結2</a></li>
+                                <li><a href="javscript:;">外部連結3</a></li>
+                                <li><a href="javscript:;">外部連結4</a></li>
+                                <li><a href="javscript:;">外部連結5</a></li>
+                            </ol>
+                        </div>
+                        <!-- file download 檔案下載 -->
+                        <div class="file_download">
+                            <h3>檔案下載</h3>
+                            <ul>
+                                <li><span class="file-name">檔案名稱</span>
+                                    <span class="doc"><a href="xxxx.doc">doc</a></span>
+                                    <span class="docx"><a href="xxx.docx">docx</a></span>
+                                    <span class="odt"><a href="xxxx.odt">odt</a></span>
+                                </li>
+                                <li><span class="file-name">檔案名稱檔案名稱</span>
+                                    <span class="xls"><a href="xxxx.xls">xls</a></span>
+                                    <span class="xlsx"><a href="xxxx.xlsx">xlsx</a></span>
+                                    <span class="csv"><a href="xxxx.csv">csv</a></span>
+                                    <span class="ods"><a href="xxxx.ods">ods</a></span>
+                                </li>
+                                <li><span class="file-name">檔案名稱</span>
+                                    <span class="ppt"><a href="xxxx.ppt">ppt</a></span>
+                                    <span class="pptx"><a href="xxxx.pptx">pptx</a></span>
+                                    <span class="odp"><a href="xxxx.odp">odp</a></span>
+                                </li>
+                                <li><span class="file-name">檔案名稱</span>
+                                    <span class="pdf"><a href="xxxx.pdf">pdf</a></span>
+                                    <span class="zip"><a href="xxxx.zip">zip</a></span>
+                                    <span class="txt"><a href="xxxx.txt">txt</a></span>
+                                    <span class="mov"><a href="xxxx.mov">mov</a></span>
+                                    <span class="mp3"><a href="xxxx.mp3">mp3</a></span>
+                                    <span class="jpg"><a href="xxxx.jpg">jpg</a></span>
+                                    <span class="wmv"><a href="xxxx.wmv">wmv</a></span>
+                                    <span class="mp4"><a href="xxxx.mp4">mp4</a></span>
+                                </li>
+                            </ul>
+                        </div>
                     </section>
-
-                    <!-- weblink 外部連結 -->
-                    <div class="web_link">
-                        <h3>外部連結</h3>
-                        <ol>
-                            <li><a href="javscript:;">外部連結1</a></li>
-                            <li><a href="javscript:;">外部連結2</a></li>
-                            <li><a href="javscript:;">外部連結3</a></li>
-                            <li><a href="javscript:;">外部連結4</a></li>
-                            <li><a href="javscript:;">外部連結5</a></li>
-                        </ol>
-                    </div>
-                    <!-- file download 檔案下載 -->
-                    <div class="file_download">
-                        <h3>檔案下載</h3>
-                        <ul>
-                            <li><span class="file-name">檔案名稱</span>
-                                <span class="doc"><a href="xxxx.doc">doc</a></span>
-                                <span class="docx"><a href="xxx.docx">docx</a></span>
-                                <span class="odt"><a href="xxxx.odt">odt</a></span>
-                            </li>
-                            <li><span class="file-name">檔案名稱檔案名稱</span>
-                                <span class="xls"><a href="xxxx.xls">xls</a></span>
-                                <span class="xlsx"><a href="xxxx.xlsx">xlsx</a></span>
-                                <span class="csv"><a href="xxxx.csv">csv</a></span>
-                                <span class="ods"><a href="xxxx.ods">ods</a></span>
-                            </li>
-                            <li><span class="file-name">檔案名稱</span>
-                                <span class="ppt"><a href="xxxx.ppt">ppt</a></span>
-                                <span class="pptx"><a href="xxxx.pptx">pptx</a></span>
-                                <span class="odp"><a href="xxxx.odp">odp</a></span>
-
-                            </li>
-                            <li><span class="file-name">檔案名稱</span>
-                                <span class="pdf"><a href="xxxx.pdf">pdf</a></span>
-                                <span class="zip"><a href="xxxx.zip">zip</a></span>
-                                <span class="txt"><a href="xxxx.txt">txt</a></span>
-                                <span class="mov"><a href="xxxx.mov">mov</a></span>
-                                <span class="mp3"><a href="xxxx.mp3">mp3</a></span>
-                                <span class="jpg"><a href="xxxx.jpg">jpg</a></span>
-                                <span class="wmv"><a href="xxxx.wmv">wmv</a></span>
-                                <span class="mp4"><a href="xxxx.mp4">mp4</a></span>
-                            </li>
-                        </ul>
-                    </div>
+                    <!-- CP End -->
                 </div>
             </div>
         </div>
