--- a/mp_template.htm
+++ b/mp_template.htm
@@ -62,7 +62,7 @@
                 </nav>
                 <!-- navigation End -->
                 <h1>
-                    <a href="#"><img src="images/logo.png" alt="網站標題" /></a>
+                    <a href="index.htm"><img src="images/logo.png" alt="網站標題" /></a>
                 </h1>
                 <!-- Search Start -->
                 <div class="search">
