2020-0926  1. 設定預設grid、2. mixin改為三個變數

--- a/index.htm
+++ b/index.htm
@@ -98,6 +98,18 @@
                     </tr>
                     <tr>
                         <td></td>
+                        <td>flex layout</td>
+                        <!-- 連結放到a裡面就好 -->
+                        <td><a href="flex_template.htm"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>flex grid</td>
+                        <!-- 連結放到a裡面就好 -->
+                        <td><a href="flex_template.htm"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
                         <td>列表頁</td>
                         <td><a href="lp_template.htm"></a></td>
                     </tr>
